--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,2 +1,6 @@
-@import "~bootstrap/scss/bootstrap";
+//@import "~bootstrap/scss/bootstrap";
+@import '~admin-lte/bower_components/bootstrap/dist/css/bootstrap.css';
+@import '~admin-lte/bower_components/font-awesome/css/font-awesome.min.css';
+@import '~admin-lte/bower_components/Ionicons/css/ionicons.min.css';
 @import '~admin-lte/dist/css/adminLTE.css';
+@import '~admin-lte/dist/css/skins/skin-blue.css';
