--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,5 +2,6 @@
 @import '~admin-lte/bower_components/bootstrap/dist/css/bootstrap.css';
 @import '~admin-lte/bower_components/font-awesome/css/font-awesome.min.css';
 @import '~admin-lte/bower_components/Ionicons/css/ionicons.min.css';
+@import "~datatables.net-bs/css/dataTables.bootstrap.min.css";
 @import '~admin-lte/dist/css/adminLTE.css';
 @import '~admin-lte/dist/css/skins/skin-blue.css';
