--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,3 +5,4 @@
 @import "~datatables.net-bs/css/dataTables.bootstrap.min.css";
 @import '~admin-lte/dist/css/adminLTE.css';
 @import '~admin-lte/dist/css/skins/skin-blue.css';
+@import '~icheck/skins/square/blue.css';
